@@ -272,8 +272,8 @@ $l['saveAttachmentTo']= 'Anhang zu diesen Elementen anhängen';
 $l['untilDateError']='Habe versucht, das folgende Enddatum einzutragen, aber der Prozess stoppte mit einem Fehler';
 
 $l['label']= 'Schlagwort';
-$l['labels']= 'Schlagwörter';
-$l['labelsLimit']= 'Es können maximal %d Schlagwörter angelegt werden';
+$l['labels']= 'Schlagworte';
+$l['labelsLimit']= 'Es können maximal %d Schlagworte angelegt werden';
 $l['saveToPersonal']= 'Im persönlichen Order speichern';
 $l['thisIsSpam1']= 'Diese Nachricht wurde als Spam identifiziert. Klicken Sie';
 $l['thisIsSpam2']= 'hier';
@@ -287,3 +287,5 @@ $l['moveToInboxTitle']= 'Aus dem Spam-Order verschieben?';
 $l['moveToInboxMsg']= 'Sind Sie sicher, dass Sie die Spam-Markierung entfernen und diese Nachricht in den Posteingang verschieben wollen?';
 
 $l['fts']= 'Ganze Nachricht';
+
+$l['icalendarOpenEvent']='Termin öffnen';
